k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/api/health"
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
