k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
